--- a/projects/anj/dominion/Makefile
+++ b/projects/anj/dominion/Makefile
@@ -57,56 +57,48 @@ unittestresults.out: cardtest1.c unittest1.c unittest2.c unittest3.c unittest4.c
 	echo "Result for running Dominion test suit:" > unittestresults.out
 
 	echo "unittest1.c:" >> unittestresults.out
-	gcc -o unittest1 -g  unittest1.c dominion.c rngs.c $(CFLAGS)
 	./unittest1 >> unittestresults.out
 	gcov unittest1.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "unittest2.c:" >> unittestresults.out
-	gcc -o unittest2 -g  unittest2.c dominion.c rngs.c $(CFLAGS)
 	./unittest2 >> unittestresults.out
 	gcov unittest2.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "unittest3.c:" >> unittestresults.out
-	gcc -o unittest3 -g  unittest3.c dominion.c rngs.c $(CFLAGS)
 	./unittest3 >> unittestresults.out
 	gcov unittest3.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "unittest4.c:" >> unittestresults.out
-	gcc -o unittest4 -g  unittest4.c dominion.c rngs.c $(CFLAGS)
 	./unittest4 >> unittestresults.out
 	gcov unittest4.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest1.c:" >> unittestresults.out
-	gcc -o cardtest1 -g  cardtest1.c dominion.c rngs.c $(CFLAGS)
 	./cardtest1 >> unittestresults.out
 	gcov cardtest1.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest2.c:" >> unittestresults.out
-	gcc -o cardtest2 -g  cardtest2.c dominion.c rngs.c $(CFLAGS)
 	./cardtest2 >> unittestresults.out
 	gcov cardtest2.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest3.c:" >> unittestresults.out
-	gcc -o cardtest3 -g  cardtest3.c dominion.c rngs.c $(CFLAGS)
 	./cardtest3 >> unittestresults.out
 	gcov cardtest3.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest4.c:" >> unittestresults.out
-	gcc -o cardtest4 -g  cardtest4.c dominion.c rngs.c $(CFLAGS)
 	./cardtest4 >> unittestresults.out
 	gcov cardtest4.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
@@ -118,4 +110,4 @@ player: player.c interface.o
 all: playdom player unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4 unittestresults.out
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so testDrawCard testDrawCard.exe unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
