--- a/projects/anj/dominion/Makefile
+++ b/projects/anj/dominion/Makefile
@@ -54,51 +54,51 @@ cardtest4: cardtest4.c dominion.o
 	gcc -o cardtest4 cardtest4.c -g dominion.o rngs.o  $(CFLAGS)
 	
 unittestresults.out: cardtest1.c unittest1.c unittest2.c unittest3.c unittest4.c dominion.c rngs.c
-	echo "Result for running Dominion test suit:" > unittestresults.out
+	echo "ASSIGNMENT 3: UNIT TEST RESULTS\n" > unittestresults.out
 
-	echo "unittest1.c:" >> unittestresults.out
+	echo "unittest1.c:\n" >> unittestresults.out
 	./unittest1 >> unittestresults.out
 	gcov unittest1.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	echo "unittest2.c:" >> unittestresults.out
+	echo "unittest2.c:\n" >> unittestresults.out
 	./unittest2 >> unittestresults.out
 	gcov unittest2.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	echo "unittest3.c:" >> unittestresults.out
+	echo "unittest3.c:\n" >> unittestresults.out
 	./unittest3 >> unittestresults.out
 	gcov unittest3.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	echo "unittest4.c:" >> unittestresults.out
+	echo "unittest4.c:\n" >> unittestresults.out
 	./unittest4 >> unittestresults.out
 	gcov unittest4.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	echo "cardtest1.c:" >> unittestresults.out
+	echo "cardtest1.c:\n" >> unittestresults.out
 	./cardtest1 >> unittestresults.out
 	gcov cardtest1.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	echo "cardtest2.c:" >> unittestresults.out
+	echo "cardtest2.c:\n" >> unittestresults.out
 	./cardtest2 >> unittestresults.out
 	gcov cardtest2.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	echo "cardtest3.c:" >> unittestresults.out
+	echo "cardtest3.c:\n" >> unittestresults.out
 	./cardtest3 >> unittestresults.out
 	gcov cardtest3.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	echo "cardtest4.c:" >> unittestresults.out
+	echo "cardtest4.c:\n" >> unittestresults.out
 	./cardtest4 >> unittestresults.out
 	gcov cardtest4.c >> unittestresults.out
 	gcov dominion.c >> unittestresults.out
@@ -111,3 +111,6 @@ all: playdom player unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 
 
 clean:
 	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so testDrawCard testDrawCard.exe unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
+
+cleanR:
+	rm -f *.out
