--- a/projects/anj/dominion/Makefile
+++ b/projects/anj/dominion/Makefile
@@ -59,48 +59,56 @@ unittestresults.out: cardtest1.c unittest1.c unittest2.c unittest3.c unittest4.c
 	echo "unittest1.c:" >> unittestresults.out
 	./unittest1 >> unittestresults.out
 	gcov unittest1.c -b >> unittestresults.out
+	cat unittest1.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "unittest2.c:" >> unittestresults.out
 	./unittest2 >> unittestresults.out
 	gcov unittest2.c -b >> unittestresults.out
+	cat unittest2.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "unittest3.c:" >> unittestresults.out
 	./unittest3 >> unittestresults.out
 	gcov unittest3.c -b >> unittestresults.out
+	cat unittest3.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "unittest4.c:" >> unittestresults.out
 	./unittest4 >> unittestresults.out
 	gcov unittest4.c -b >> unittestresults.out
+	cat unittest4.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest1.c:" >> unittestresults.out
 	./cardtest1 >> unittestresults.out
 	gcov cardtest1.c -b >> unittestresults.out
+	cat cardtest1.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest2.c:" >> unittestresults.out
 	./cardtest2 >> unittestresults.out
 	gcov cardtest2.c -b >> unittestresults.out
+	cat cardtest2.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest3.c:" >> unittestresults.out
 	./cardtest3 >> unittestresults.out
 	gcov cardtest3.c -b >> unittestresults.out
+	cat cardtest3.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
 	echo "cardtest4.c:" >> unittestresults.out
 	./cardtest4 >> unittestresults.out
 	gcov cardtest4.c -b >> unittestresults.out
+	cat cardtest4.c.gcov >> unittestresults.out
 	gcov dominion.c -b >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
