--- a/projects/anj/quiz/Makefile
+++ b/projects/anj/quiz/Makefile
@@ -5,11 +5,11 @@
 # Description: A makefile that creates compile and executes the testme.c file
 ##############################################################################
 
-CFLAGS = -Wall -fpic -lm
+CFLAGS = -Wall -fpic -coverage -lm
 
 testme: testme.c 
 	gcc -o testme testme.c -g  $(CFLAGS)
 	./testme
 
 clean:
-	rm -f *.o testme.exe testme
+	rm -f *.o testme.exe testme *.gcov *.gcda *.gcno
