--- a/projects/anj/dominion/Makefile
+++ b/projects/anj/dominion/Makefile
@@ -29,11 +29,127 @@ runtests: testDrawCard
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
+unittest1: unittest1.c dominion.o
+	gcc -o unittest1 -g unittest1.c dominion.o rngs.o  $(CFLAGS)
+
+unittest2: unittest2.c dominion.o
+	gcc -o unittest2 unittest2.c -g dominion.o rngs.o  $(CFLAGS)
+	
+unittest3: unittest3.c dominion.o
+	gcc -o unittest3 unittest3.c -g dominion.o rngs.o  $(CFLAGS)
+	
+unittest4: unittest4.c dominion.o
+	gcc -o unittest4 unittest4.c -g dominion.o rngs.o  $(CFLAGS)
+	
+cardtest1: cardtest1.c dominion.o
+	gcc -o cardtest1 cardtest1.c -g dominion.o rngs.o  $(CFLAGS)
+
+cardtest2: cardtest2.c dominion.o
+	gcc -o cardtest2 cardtest2.c -g dominion.o rngs.o  $(CFLAGS)
+
+cardtest3: cardtest3.c dominion.o
+	gcc -o cardtest3 cardtest3.c -g dominion.o rngs.o  $(CFLAGS)
+
+cardtest4: cardtest4.c dominion.o
+	gcc -o cardtest4 cardtest4.c -g dominion.o rngs.o  $(CFLAGS)
+	
+unittestresults.out: cardtest1.c unittest1.c unittest2.c unittest3.c unittest4.c dominion.c rngs.c
+	echo "ASSIGNMENT 3: UNIT TEST RESULTS" > unittestresults.out
+
+	echo "unittest1.c:" >> unittestresults.out
+	./unittest1 >> unittestresults.out
+	gcov unittest1.c -b >> unittestresults.out
+	cat unittest1.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+	echo "unittest2.c:" >> unittestresults.out
+	./unittest2 >> unittestresults.out
+	gcov unittest2.c -b >> unittestresults.out
+	cat unittest2.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+	echo "unittest3.c:" >> unittestresults.out
+	./unittest3 >> unittestresults.out
+	gcov unittest3.c -b >> unittestresults.out
+	cat unittest3.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+	echo "unittest4.c:" >> unittestresults.out
+	./unittest4 >> unittestresults.out
+	gcov unittest4.c -b >> unittestresults.out
+	cat unittest4.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+	echo "cardtest1.c:" >> unittestresults.out
+	./cardtest1 >> unittestresults.out
+	gcov cardtest1.c -b >> unittestresults.out
+	cat cardtest1.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+	echo "cardtest2.c:" >> unittestresults.out
+	./cardtest2 >> unittestresults.out
+	gcov cardtest2.c -b >> unittestresults.out
+	cat cardtest2.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+	echo "cardtest3.c:" >> unittestresults.out
+	./cardtest3 >> unittestresults.out
+	gcov cardtest3.c -b >> unittestresults.out
+	cat cardtest3.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+	echo "cardtest4.c:" >> unittestresults.out
+	./cardtest4 >> unittestresults.out
+	gcov cardtest4.c -b >> unittestresults.out
+	cat cardtest4.c.gcov >> unittestresults.out
+	gcov dominion.c -b >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+
+randomtestadventurer: randomtestadventurer.c dominion.o
+	gcc -o randomtestadventurer randomtestadventurer.c -g dominion.o rngs.o  $(CFLAGS)
+	
+randomtestcard1: randomtestcard1.c dominion.o
+	gcc -o randomtestcard1 randomtestcard1.c -g dominion.o rngs.o  $(CFLAGS)
+
+randomtestcard2: randomtestcard2.c dominion.o
+	gcc -o randomtestcard2 randomtestcard2.c -g dominion.o rngs.o  $(CFLAGS)
+
+randomtestadventurer.out: randomtestadventurer.c rngs.c
+	echo "randomtestadventurer.c:" >> randomtestadventurer.out
+	./randomtestadventurer >> randomtestadventurer.out
+	gcov randomtestadventurer.c -b >> randomtestadventurer.out
+	cat randomtestadventurer.c.gcov >> randomtestadventurer.out
+	gcov dominion.c -b >> randomtestadventurer.out
+	cat dominion.c.gcov >> randomtestadventurer.out
+
+randomtestcard1.out: randomtestcard1.c rngs.c
+	echo "randomtestcard1.c:" >> randomtestcard1.out
+	./randomtestcard1 >> randomtestcard1.out
+	gcov randomtestcard1.c -b >> randomtestcard1.out
+	cat randomtestcard1.c.gcov >> randomtestcard1.out
+	gcov dominion.c -b >> randomtestcard1.out
+	cat dominion.c.gcov >> randomtestcard1.out
+
+randomtestcard2.out: randomtestcard2.c rngs.c	
+	echo "randomtestcard2.c:" >> randomtestcard2.out
+	./randomtestcard2 >> randomtestcard2.out
+	gcov randomtestcard2.c -b >> randomtestcard2.out
+	cat randomtestcard2.c.gcov >> randomtestcard2.out
+	gcov dominion.c -b >> randomtestcard2.out
+	cat dominion.c.gcov >> randomtestcard2.out
+
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player 
-
+all: playdom player randomtestcard1 randomtestcard2 randomtestadventurer  randomtestadventurer.out randomtestcard1.out randomtestcard2.out
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
+	rm -f *.o playdom.exe playdom player *.exe  *.gcov *.gcda *.gcno *.so
+	
